--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <label for="file">Upload file <input type="file" id="file" accept=".obj"/></label>
     <canvas width="500" height="500" id="input"></canvas>
     <script src="script.js" type="module"></script>
 </body>
